version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/FE/CDB/SecoffsetCommand.rst.txt
.. vale off



:class:`SecoffsetCommand`
=========================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.FE.CDB.SecoffsetCommand(iSecoffsetCommand: Ansys.Common.Interop.FEParsePlugin_ANSYS.ISecoffsetCommand)

   Bases: :py:obj:`object`


   
   Represents a SECOFFSET command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: SecoffsetCommand

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Index`
            - Gets the command index.
          * - :py:attr:`~Location`
            - Gets the location of nodes in the section.
          * - :py:attr:`~Name`
            - Gets the command name.
          * - :py:attr:`~Values`
            - Gets the values.







Property detail
---------------
.. py:property:: Index
   :type: Optional[int]


   
   Gets the command index.
















   ..
       !! processed by numpydoc !!

.. py:property:: Location
   :type: Optional[str]


   
   Gets the location of nodes in the section.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Gets the command name.
















   ..
       !! processed by numpydoc !!

.. py:property:: Values
   :type: Optional[tuple[float]]


   
   Gets the values.
















   ..
       !! processed by numpydoc !!







.. vale on